references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/StateSubactions_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:3bf1f863381c75c55221344bd50dd33a86e2f86c012740dd5a8d732ef37200ef
size 2323
